# 2019_labs

./: .gitignore  .gitmodules  GIT.ipynb  README.md  aa
OOP/: OOP.ipynb
OOP/src/: @  CMakeLists.txt  draw.cc
OOP/src/lib/: CMakeLists.txt  myVector.h  stlVector.cc  stlVector.h
OOP/src/python/: CMakeLists.txt  LabOOP.py  pyLabOOP.cpp
OOP/src/testing/: CMakeLists.txt  vectorTest.cc
cloud/: Cloud.ipynb
cmake/: cmake.ipynb
cmake/example/src/: CMakeLists.txt  dowGame.cc
cmake/example/src/lib/: CMakeLists.txt  dow30.cc  dow30.h
cmake/src/: CMakeLists.txt
cmake/src/lib/: estimatePi.cc  estimatePi.h  piEstimate.cc
cuda1/: Cuda 1.ipynb
cuda2/: Cuda 2.ipynb
docker-singularity/: Docker and singularity.ipynb
jupyter/: jupyter.ipynb
mpi/: MPI.ipynb
mpi/src/: CMakeLists.txt  advection.c  pingpong.c
numba/: numba.ipynb
numba/CFDPython-master/lessons/: 01_Step_1.ipynb
openmp/: OpenMP.ipynb
openmp/src/: CMakeLists.txt
openmp/src/lib/: CMakeLists.txt  main.cc  rescale.cc
openmp/src/python/: CMakeLists.txt  LabOpenMP.py  pyLabOpenMP.cpp
optimization/: Optimization.ipynb
optimization/src/: CMakeLists.txt  field3d.cc  field3d.h  main.cc  prop.cc  prop.h
pbsQueue/: Queue.ipynb
pybind11/: pybind11.ipynb
roofline/: Roofline model.ipynb
roofline/src/: CMakeLists.txt  main.cc
roofline/src/lib/: CMakeLists.txt  heat.cc  heat.h
roofline/src/python/: CMakeLists.txt  LabRoofline.py  pyLabRoofline.cpp
tbb/: TBB.ipynb
tbb/src/: CMakeLists.txt
tbb/src/lib/: CMakeLists.txt  mat2dFloat.cc  rescale.cc  rescale.h  wavelet2D.cc  wavelet2D.h
tbb/src/python/: CMakeLists.txt  LabTBB.py  pyLabTBB.cpp
unit-test/: Unit testing.ipynb
vectorization/: Vectorization.ipynb
vectorization/src/: CMakeLists.txt
vectorization/src/cmake/: ispc.cmake
vectorization/src/lib/: CMakeLists.txt  kernel.h  kernel.ispc  mat2dFloat.h  mult.cc  mult.h  timer.cc  wavelet2D.cc  wavelet2D.h
vectorization/src/python/: CMakeLists.txt  LabISPC.py  pyLabISPC.cpp
